Fixed left alignment of header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,3 +21,7 @@
 .nav-link:hover::after {
   width: 100%;
 }
+
+.header-float {
+  left: 1rem;
+}
